import 'package:flutter/material.dart';
import 'sample_category.dart';

const categoryModel = [
  SampleCategory(
    category: "drink",
    title: "飲み物",
    color: Colors.white,
    iconData: Icons.local_drink,
  ),
  SampleCategory(
    category: "place",
    title: "場所",
    color: Colors.white,
    iconData: Icons.place,
  ),
  SampleCategory(
    category: "tool",
    title: "道具",
    color: Colors.white,
    iconData: Icons.construction,
  ),
  SampleCategory(
    category: "vehicle",
    title: "乗り物",
    color: Colors.white,
    iconData: Icons.directions_car,
  ),
  SampleCategory(
    category: "emotion",
    title: "気持ち",
    color: Colors.white,
    iconData: Icons.emoji_emotions,
  ),
  SampleCategory(
    category: "greeting",
    title: "挨拶",
    color: Colors.white,
    iconData: Icons.emoji_people,
  ),
  SampleCategory(
    category: "else",
    title: "その他",
    color: Colors.white,
    iconData: Icons.info_rounded,
  ),
];
